--- a/style.css
+++ b/style.css
@@ -1,33 +1,34 @@
-*  {
-    margin:0;
-    padding:0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
+body {background:rgb(253, 251, 251);
+   }
 
-
-body {
-    background:rgb(253, 251, 251);
-
-}
-
-#cabecalho {
-    top: 0; 
-    position: fixed;
-    margin: 10px;
-    padding: 10px;
-    background-color: rgba(226, 150, 124, 0.466);
+#cabecalho { /* inspirado na vídeo aula https://www.youtube.com/watch?v=x-4z_u8LcGc&t=798s - Origamid */
+   display: flex;
+   top: 0;
+   align-items: center;
+   background-color: black;
+   position: fixed;
+   padding: 0;
+   font-family: Arial;
+   
 
 }
 
+#menuprincipal {
+    display: flex;
+    align-items: flex-end;
+} 
+ 
 #titulo {
     font-size: 60px;
-    color: rgb(153, 147, 147);
-    background-color: rgba(212, 100, 123, 0.527);
-    padding-left: 15px;
+    color: rgb(219, 107, 182);
+    text-align: center;
 }
-/*width: 1270px;
-height: 100px; estava usando no titulo para ocupar a largura da pagina */
+
+.menu {
+margin-left: 10px;
+display: block;
+padding: 10px;
+color: rgb(153, 147, 147);}
 
 p {
     margin: 15px 0px;
@@ -37,89 +38,118 @@ p {
     }
 
 #minha_foto {
-    width: 500px;
-    position: absolute;
-    top: 250px;
-    right: 40%;
-   
+    left: 100px;
+    top: 300px;
+    width:500px;
+}
+
+.lado-esquerdo {
+    margin-left: 10px;
+    float: left;
+    position:absolute;
+    left: 100px;
+    top: 300px;
+    width:500px;
+    border: solid plum 5px;
+    
+}
+
+.lado-direito {
+    
+    float: right;
+    top: 300px;
+    right: 300px;
+    height: 200px;
+    width: 350px;
+    margin-right: 30px;
+    padding: 10px;
+    position: relative;
     }
+
+    .lado-direito1 {
+    
+        float: right;
+        top: 500px;
+        right: 300px;
+        height: 150px;
+        width: 350px;
+        margin-right: 30px;
+        padding: 10px;
+        position: flex;
+        }
 
 #linkexterno {
     font-style: normal;
 }
 
+
 aside {
     width: 15%;
+    right: 0%;
     float: right;
-    position: relative;
-    top: 850px;
+    position: absolute;
+    top: 1000px;
     padding: 10px;
 }
+
 .tabelaexplicativa { 
     background-color: antiquewhite;
     height: 500px;
     margin-top: 15px;
     margin-left:15px;
     margin-right: 0px;
-    text-align: center;
-        
-    }
-
-.cabeçalhotabela {
-    margin: auto;
-}
-
-#menuprincipal {
-    display: inline;
-    position: fixed;
-    padding: 5px;
-    color:rgb(153, 147, 147);
-    top: 150px;
-}
-
-.menu {
-float: left;
-list-style: none;
-margin: 10px;
-padding: 3px;
-border-right: 1px solid;
-display: inline;
-
-}
+    text-align: center;}
 
 article {
     position: absolute;
-    top: 650px;
-    width: 80%;
-}
-
-.texto1 {
+    top: 100%;
+    width: 1250px;
+    height: 50px;
+    margin: 20px;
+    border: 2px;
+    padding: 10px;
+ }
+    
+.textoartigo {
     line-height: 1.5;
+    text-align: justify;
+    }
+
+.titulodoartigo {
+
+background-color:plum
 }
 
 .lista1 {
-
-    top: 900px;
-    margin: 15px;
-    padding: 15px;
+    top: 1000px;
+    width: 400px;
+    height: auto;
     position: absolute;
-
-}
+    margin: 20px;
+    border: 2px;
+    padding: 10px;
+    background-color: plum;
+    }
 
 .lista2 {
-    top: 900px;
-    right: 531px;
-    padding: 15px;
+    top: 1300px;
+    width: 400px;
+    height: auto;
     position: absolute;
+    margin: 20px;
+    border: 2px;
+    padding: 10px;
+    background-color: plum;
+
 }
 
 #rodape {
     font-style: italic;
     position: absolute;
-    bottom:0;
+    bottom: 100px;;
     background-color: rgba(226, 150, 124, 0.466) solid;
-    
-    }
+    top: 220%;
+}
 
 .secaorodape {
     margin-left: 500px;
