--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {background:rgb(253, 251, 251);
-   }
+}
 
 #cabecalho { /* inspirado na vídeo aula https://www.youtube.com/watch?v=x-4z_u8LcGc&t=798s - Origamid */
    display: flex;
@@ -25,17 +25,18 @@ body {background:rgb(253, 251, 251);
 }
 
 .menu {
-margin-left: 10px;
-display: block;
-padding: 10px;
-color: rgb(153, 147, 147);}
+    margin-left: 10px;
+    display: block;
+    padding: 10px;
+    color: rgb(153, 147, 147);
+}
 
 p {
     margin: 15px 0px;
     text-align: justify;
     text-indent: 30px;
     line-height: 2px;
-    }
+}
 
 #minha_foto {
     left: 100px;
@@ -51,32 +52,31 @@ p {
     top: 300px;
     width:500px;
     border: solid plum 5px;
-    
+
 }
 
-.lado-direito {
-    
+.lado-direito {    
     float: right;
-    top: 300px;
+    top: 250px;
     right: 300px;
     height: 200px;
     width: 350px;
     margin-right: 30px;
     padding: 10px;
     position: relative;
-    }
 
-    .lado-direito1 {
-    
-        float: right;
-        top: 500px;
-        right: 300px;
-        height: 150px;
-        width: 350px;
-        margin-right: 30px;
-        padding: 10px;
-        position: flex;
-        }
+}
+
+#lado-direito1 {    
+    float: right;
+    top: 550px;
+    right: 300px;
+    height: 150px;
+    width: 350px;
+    margin-right: 30px;
+    padding: 10px;
+    position: absolute;
+}
 
 #linkexterno {
     font-style: normal;
@@ -108,7 +108,17 @@ article {
     margin: 20px;
     border: 2px;
     padding: 10px;
- }
+}
+
+#aprendendoaaprender {
+    position: absolute;
+    top: 800px;
+    width: 1250px;
+    height: 50px;
+    margin: 20px;
+    border: 2px;
+    padding: 10px
+}
     
 .textoartigo {
     line-height: 1.5;
@@ -116,8 +126,9 @@ article {
     }
 
 .titulodoartigo {
-
-background-color:plum
+    border: 5px;
+    padding: 5px;
+    background-color:plum
 }
 
 .lista1 {
