--- a/style.css
+++ b/style.css
@@ -45,28 +45,30 @@ p {
   left: 100px;
   top: 300px;
   width: 500px;
+  height: 370;
 }
 
 .lado-esquerdo {
   margin-left: 10px;
   float: left;
-  position: absolute;
+  position: relative;
   left: 100px;
-  top: 300px;
+  top: 250px;
+  height: 370px;
   width: 500px;
   border: solid plum 5px;
 
 }
 
 .lado-direito {
+  margin-right: 10px;
   float: right;
-  top: 250px;
-  right: 300px;
-  height: 200px;
-  width: 350px;
-  margin-right: 30px;
-  padding: 10px;
   position: relative;
+  right: 100px;
+  top: 250px;
+  height: 370px;
+  width: 500px;
+  
 
 }
 
@@ -103,15 +105,7 @@ aside {
   text-align: center;
 }
 
-article {
-  position: absolute;
-  top: 100%;
-  width: 1250px;
-  height: 50px;
-  margin: 20px;
-  border: 2px;
-  padding: 10px;
-}
+
 
 #aprendendoaaprender {
   position: absolute;
